[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Scenery/pausemenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Font/Memogram2.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Font/memogram/Memogram.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Font/subtitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Font/Memogram3.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/options.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/TransitionScreen1.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sfx/menu-select-button-182476.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sprites/SettingIcon.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/PlayButton.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/ExitIcon.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76.5333, 67.9 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )
next_scene = "res://scenes/MainMenu.tscn"

[node name="TransitionScreen1" parent="." instance=ExtResource( 9 )]
layer = 2
visible = false

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1599, 0 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1418, 0 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.85098 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( -704, 72 )
mouse_filter = 2
custom_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 313.0
margin_right = 1920.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 2 )
text = "The game is paused"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 438.0
margin_right = 1920.0
margin_bottom = 438.0
mouse_filter = 2
custom_constants/separation = 60
alignment = 1

[node name="PlayButton" type="Area2D" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
pause_mode = 2
position = Vector2( -875.714, 2 )
scale = Vector2( 0.714286, 0.714286 )
z_index = 3
priority = 1.0

[node name="PlayIcon" type="Sprite" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton"]
position = Vector2( 2339, 310.8 )
scale = Vector2( 1.68, 1.68 )
texture = ExtResource( 12 )
offset = Vector2( -75, -125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton"]
pause_mode = 2
position = Vector2( 2214.87, 100.1 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="OptionsButton" type="Area2D" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
pause_mode = 2
position = Vector2( -875.714, 2 )
scale = Vector2( 0.714286, 0.714286 )
z_index = 3

[node name="OptionsIcon" type="Sprite" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsButton"]
position = Vector2( 2571.4, 100.8 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsButton"]
pause_mode = 2
position = Vector2( 2577, 95.2 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="ExitButton" type="Area2D" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
pause_mode = 2
position = Vector2( -875.714, 2 )
scale = Vector2( 0.714286, 0.714286 )
z_index = 3

[node name="ExitIcon" type="Sprite" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton"]
position = Vector2( 2942.4, 100.8 )
scale = Vector2( 1.96, 1.96 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton"]
pause_mode = 2
position = Vector2( 2943.8, 95.2 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="Whitespace" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 462.0
margin_right = 1920.0
margin_bottom = 603.0
custom_fonts/font = ExtResource( 7 )
text = "
"
align = 1
valign = 2

[node name="FlavorText" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 627.0
margin_right = 1920.0
margin_bottom = 703.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 2

[node name="Subtitle" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 727.0
margin_right = 1920.0
margin_bottom = 766.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="Options" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 328.0
margin_top = 170.0
margin_right = -238.0
margin_bottom = -110.0

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[connection signal="input_event" from="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_input_event"]
[connection signal="input_event" from="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_input_event"]
[connection signal="input_event" from="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_input_event"]
[connection signal="closed_menu" from="Options" to="." method="_on_Options_closed_menu"]
